# by-the-app-demo

./: .gitignore  APPOINTMENTS_FIELD_MAPPING_FIX.md  AUTHENTICATION_WORKFLOW.md  AUTH_ENDPOINTS_SETUP.md  AVAILABILITY_MANAGEMENT_API.md  CONSUMER_PIPELINE_SETUP.md  DASHBOARD_ENDPOINTS.md  DEPLOYMENT_GUIDE.md  DOCKER_BUILD_FIX.md  DOCKER_COMPOSE_WITHOUT_KAFKA.md  DOCKER_K8S_AUTH_FIX.md  DOCKER_LOCAL_SETUP.md  DOCKER_RUN_VS_COMPOSE.md  Dockerfile  Dockerfile.consumer  FRONTEND_JWT_GUIDE.md  KAFKA_SETUP.md  MANIFEST.in  PATIENT_NEW_FIELDS.md  README.md  azure-pipelines-consumer-alternative.yml  azure-pipelines-consumer.yml  azure-pipelines.yml  check_password_length.py  debug_patient_creation.py  decorators.py  decorators_twilio_auth.py  deploy_kafka_consumer.sh  deploy_main_api.sh  deployment.yaml  docker-compose.yml  docker-run-consumer-8082.sh  docker-run-consumer-simple.sh  docker-run-consumer.sh  fix_acr_auth.sh  fix_admin_password.sql  fix_all_deployments.sh  fix_appointments_table.sql  fix_password_simple.sql  generate_jwt_secret.py  (+30 more)
app/: __init__.py  config.py  extensions.py
app/routes/: appointment.py  auth.py  availability.py  dashboard.py  dentist.py  patient.py  register.py  resetpassword.py  settings.py  train_data.py  user.py  voice.py
app/static/: training-data.jsonl
app/utils/: azure-utils.py  azure_utils.py  booking.py  db.py  db_gather_info_helpers.py  db_setup.py  decorators.py  decorators_twilio_auth.py  kafka_consumer.py  kafka_producer.py  speech_services.py  train_model.py  training_data_loader.py
dental_care_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: ACR_AUTH_FIX.md  APPOINTMENT_MANAGEMENT_API.md  AVAILABILITY_API_TEST.md  AZURE_PIPELINE_TROUBLESHOOTING.md  BCRYPT_VERSION_FIX.md  BCRYPT_WARNING_FIX.md  DATABASE_SCHEMA_UPDATES.md  DENTIST_WORKING_HOURS.md  JWT_SECRET_KEY_EXPLANATION.md  KAFKA_DEPLOYMENT_FIX.md  PATIENT_MANAGEMENT_API.md  PRODUCTION_JWT_SECURITY.md  REFRESH_TOKEN_API.md  RESET_ADMIN_PASSWORD_GUIDE.md  TESTS_ORGANIZATION.md  TESTS_README.md  TEST_AUTH_ENDPOINTS.md  USER_MANAGEMENT_API.md
manifests/: deployment.yml  kafka-certs-secret.yaml  kafka-consumer-deployment-no-ssl.yaml  kafka-consumer-deployment.yaml  service.yml
sql_files/: add_dentist_working_hours.sql  add_patient_fields.sql  setup_appointments_table.sql  setup_availability_table.sql  setup_settings_table.sql
tests/: __init__.py  cleanup_availability.py  run_all_tests.py  test_ai_response_kafka.py  test_appointments_fixed.py  test_auth_endpoints.py  test_availability_api.py  test_booking_fix.py  test_dashboard_endpoints.py  test_dentist_working_hours.py  test_kafka_simple.py  test_patient_new_fields.py  test_refresh_token.py  test_reminder_logic.py
tests/database/: test_db_connection.py
tests/kafka/: __init__.py  quick_kafka_test.py  quick_test.py  test_consumer.py  (+2 more)
(+2 files in other folders)
